@@ -2,15 +2,19 @@ package com.copay.app.service.group;
 
 import java.lang.reflect.Field;
 import java.time.LocalDateTime;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
+import com.copay.app.dto.expense.response.CreditorResponseDTO;
+import com.copay.app.dto.group.auxiliary.*;
+import com.copay.app.dto.group.request.UpdateGroupEstimatedPriceRequestDTO;
+import com.copay.app.dto.group.response.GetGroupMembersResponseDTO;
+import com.copay.app.dto.group.response.GroupResponseDTO;
 import com.copay.app.entity.Expense;
+import com.copay.app.exception.group.*;
 import com.copay.app.repository.expense.ExpenseRepository;
 import com.copay.app.service.expense.ExpenseServiceImpl;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.data.util.ReflectionUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,19 +23,12 @@ import com.copay.app.dto.MessageResponseDTO;
 import com.copay.app.dto.group.request.CreateGroupRequestDTO;
 import com.copay.app.dto.group.request.UpdateGroupRegisteredMembersRequestDTO;
 import com.copay.app.dto.group.request.UpdateGroupExternalMembersRequestDTO;
-import com.copay.app.dto.group.auxiliary.RegisteredMemberDTO;
-import com.copay.app.dto.group.auxiliary.ExternalMemberDTO;
-import com.copay.app.dto.group.auxiliary.GroupOwnerDTO;
-import com.copay.app.dto.group.response.CreateGroupResponseDTO;
 import com.copay.app.dto.group.response.GetGroupResponseDTO;
 import com.copay.app.entity.Group;
 import com.copay.app.entity.User;
 import com.copay.app.entity.relations.ExternalMember;
 import com.copay.app.entity.relations.GroupMember;
 import com.copay.app.entity.relations.GroupMemberId;
-import com.copay.app.exception.group.GroupNotFoundException;
-import com.copay.app.exception.group.InvalidGroupCreatorException;
-import com.copay.app.exception.group.InvitedMemberNotFoundException;
 import com.copay.app.exception.user.UserNotFoundException;
 import com.copay.app.repository.ExternalMemberRepository;
 import com.copay.app.repository.GroupMemberRepository;
@@ -39,8 +36,6 @@ import com.copay.app.repository.GroupRepository;
 import com.copay.app.repository.UserRepository;
 import com.copay.app.service.JwtService;
 import com.fasterxml.jackson.databind.ObjectMapper;
-
-import java.util.Objects;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
@@ -85,23 +80,29 @@ public class GroupServiceImpl implements GroupService {
 
 	@Override
 	@Transactional
-	public CreateGroupResponseDTO createGroup(CreateGroupRequestDTO request) {
+	public GroupResponseDTO createGroup(CreateGroupRequestDTO request) {
 
-		// Check if the creator exists on the database and saves the user_id.
+		// Check if the creator exists in the database and save the user_id.
 		User creator = userRepository.findById(request.getCreatedBy())
 				.orElseThrow(() -> new UserNotFoundException("User with ID " + request.getCreatedBy() + " not found"));
 
-		// Loop to check if the invited registered members have an account.
-		for (String phoneNumber : request.getInvitedRegisteredMembers()) {
-			userRepository.findByPhoneNumber(phoneNumber).orElseThrow(() -> new InvitedMemberNotFoundException(
-					"This phone number owner doesn't have an account: " + phoneNumber));
+		// Validate only one payer (only one can have Payer=true)
+		boolean hasRegisteredPayer = request.getInvitedRegisteredMembers().stream().anyMatch(InvitedRegisteredMemberDTO::isPayer);
+		boolean hasExternalPayer = request.getInvitedExternalMembers().stream().anyMatch(InvitedExternalMemberDTO::isPayer);
+
+		if ((hasRegisteredPayer && hasExternalPayer) || (!hasRegisteredPayer && !hasExternalPayer)) {
+			throw new InvalidPayerSelectionException("Exactly one payer must be selected, either registered or external.");
 		}
 
-		// Creates a group instance.
+		// Loop to check if the invited registered members have an account.
+		for (InvitedRegisteredMemberDTO member : request.getInvitedRegisteredMembers()) {
+			userRepository.findByPhoneNumber(member.getPhoneNumber()).orElseThrow(() ->
+					new InvitedMemberNotFoundException("This phone number owner doesn't have an account: " + member.getPhoneNumber()));
+		}
+
+		// Create a group instance.
 		Group group = new Group();
 
-		// This field will store the reference to the User entity, JPA will handle the
-		// user_id automatically.
 		group.setCreatedBy(creator);
 		group.setName(request.getName());
 		group.setDescription(request.getDescription());
@@ -111,8 +112,7 @@ public class GroupServiceImpl implements GroupService {
 		// Persists the group details in the database.
 		group = groupRepository.save(group);
 
-		// Create the composite key for the group-member relationship with the group and
-		// user.
+		// Create the composite key for the group-member relationship with the group and user.
 		GroupMemberId creatorMemberId = new GroupMemberId(group, creator);
 		// Instantiate the GroupMember entity using the composite key.
 		GroupMember creatorGroupMember = new GroupMember(creatorMemberId);
@@ -121,41 +121,39 @@ public class GroupServiceImpl implements GroupService {
 		groupMemberRepository.save(creatorGroupMember);
 
 		// Excludes the creator of the group from the invitedMembers list.
-		List<String> invitedMembers = request.getInvitedRegisteredMembers().stream()
-				.filter(phone -> !phone.equals(creator.getPhoneNumber())).collect(Collectors.toList());
+		List<InvitedRegisteredMemberDTO> invitedMembers = request.getInvitedRegisteredMembers().stream()
+				.filter(m -> !m.getPhoneNumber().equals(creator.getPhoneNumber()))
+				.toList();
 
 		// Loop to persist invited registered members into the database.
-		for (String phoneNumber : invitedMembers) {
+		for (InvitedRegisteredMemberDTO registeredMember : invitedMembers) {
 
-			// Find the registered members by the phone number.
-			User invitedRegisteredMember = userRepository.findByPhoneNumber(phoneNumber).get();
+			User invitedRegisteredMember  = userRepository.findByPhoneNumber(registeredMember.getPhoneNumber()).get();
 
-			GroupMemberId invitedMemberId = new GroupMemberId(group, invitedRegisteredMember);
+			GroupMemberId memberId = new GroupMemberId(group, invitedRegisteredMember);
 
-			// Validates if the user already belongs to the group.
-			if (groupMemberRepository.existsById(invitedMemberId)) {
-				// Skip the user if they are already a member of the group.
-				continue;
-			}
+			// Validates if the user already belongs to the group and skip the user if is already a member of the group.
+			if (groupMemberRepository.existsById(memberId)) continue;
 
 			// If the user is not already a member, create and add them to the group.
-			GroupMember invitedGroupMember = new GroupMember(invitedMemberId);
+			GroupMember groupMember = new GroupMember(memberId);
 
 			// Add the user to the group
-			group.getRegisteredMembers().add(invitedGroupMember);
+			group.getRegisteredMembers().add(groupMember);
 		}
 
 		// Loop to interact with the List of the externalMembers.
-		for (String externalName : request.getInvitedExternalMembers()) {
+		for (InvitedExternalMemberDTO externalMember : request.getInvitedExternalMembers()) {
 
 			// Create and persist an ExternalMember.
-			ExternalMember externalMember = new ExternalMember();
-			externalMember.setName(externalName);
-			externalMember.setGroup(group);
-			externalMember.setJoinedAt(LocalDateTime.now());
+			ExternalMember external = new ExternalMember();
+
+			external.setName(externalMember.getName());
+			external.setGroupId(group);
+			external.setJoinedAt(LocalDateTime.now());
 
 			// Add the external member to the group
-			group.getExternalMembers().add(externalMember);
+			group.getExternalMembers().add(external);
 		}
 
 		/*
@@ -167,20 +165,50 @@ public class GroupServiceImpl implements GroupService {
 		 */
 		entityManager.merge(group);
 
-		// Null because the user who pays is always the creator of the group (temporal).
-		expenseServiceImpl.initializeExpenseFromGroup(group, group.getEstimatedPrice(), creator, null);
+		// Identify the payer among registered or external members.
+		User paidByUser = null;
+		ExternalMember paidByExternalMember = null;
+
+		// Check if any registered member is marked as the payer.
+		Optional<InvitedRegisteredMemberDTO> payerRegistered = request.getInvitedRegisteredMembers().stream()
+				.filter(InvitedRegisteredMemberDTO::isPayer)
+				.findFirst();
+
+		// Check if any external member is marked as the payer.
+		Optional<InvitedExternalMemberDTO> payerExternal = request.getInvitedExternalMembers().stream()
+				.filter(InvitedExternalMemberDTO::isPayer)
+				.findFirst();
+
+		if (payerRegistered.isPresent()) {
+
+			// Get the registered payer user from the database by phone number.
+			String phone = payerRegistered.get().getPhoneNumber();
+			paidByUser = userRepository.findByPhoneNumber(phone)
+					.orElseThrow(() -> new UserNotFoundException("Registered creditor user with phone " + phone + " not found"));
+		} else {
+
+			// Get the external payer member from the persisted group by name.
+			String payerName = payerExternal.get().getName();
+			paidByExternalMember = group.getExternalMembers().stream()
+					.filter(em -> em.getName().equals(payerName))
+					.findFirst()
+					.orElseThrow(() -> new ExternalMemberNotFoundException("External member creditor with name " + payerName + " not found"));
+		}
+
+		// Create expense for the group through the expenseServiceImpl.
+		expenseServiceImpl.initializeExpenseFromGroup(group, group.getEstimatedPrice(), paidByUser, paidByExternalMember);
 
 		// Map the group instance to GroupResponseDTO.
-		return mapToGroupResponseDTO(group, request.getCreatedBy());
+		return mapToGroupResponseDTO(group, request.getCreatedBy(), paidByUser, paidByExternalMember);
 	}
 
 	// Helper method to map Group entity to GroupResponseDTO.
-	private CreateGroupResponseDTO mapToGroupResponseDTO(Group group, Long userId) {
+	private GroupResponseDTO mapToGroupResponseDTO(Group group, Long userId, User paidByUser, ExternalMember paidByExternalMember) {
 
 		// Initialize an instance of the DTO that is going to be used as a response.
-		CreateGroupResponseDTO groupResponseDTO = new CreateGroupResponseDTO();
+		GroupResponseDTO groupResponseDTO = new GroupResponseDTO();
 
-		// Set group details
+		// Set group details.
 		groupResponseDTO.setGroupId(group.getGroupId());
 		groupResponseDTO.setName(group.getName());
 		groupResponseDTO.setDescription(group.getDescription());
@@ -197,6 +225,18 @@ public class GroupServiceImpl implements GroupService {
 		groupOwnerDTO.setOwnerName(group.getCreatedBy().getUsername());
 		groupResponseDTO.setGroupOwner(groupOwnerDTO);
 
+		CreditorResponseDTO creditorDTO = null;
+
+		if (paidByUser != null) {
+
+			creditorDTO = new CreditorResponseDTO(paidByUser.getUserId(), paidByUser.getUsername());
+		} else if (paidByExternalMember != null) {
+
+			creditorDTO = new CreditorResponseDTO(paidByExternalMember.getExternalMembersId(), paidByExternalMember.getName());
+		}
+
+		groupResponseDTO.setCreditor(creditorDTO);
+
 		// Map registered members (RegisteredMemberDTO -> includes id and phoneNumber).
 		if (group.getRegisteredMembers() != null) {
 
@@ -206,13 +246,11 @@ public class GroupServiceImpl implements GroupService {
 				return new RegisteredMemberDTO(user.getUserId(), user.getUsername(), user.getPhoneNumber());
 			}).collect(Collectors.toList());
 
-
 			// Set the mapped list of RegisteredMemberDTO in the response DTO.
 			groupResponseDTO.setRegisteredMembers(groupMemberResponseDTOList);
 		}
 
-		// Map external members (ExternalMemberDTO -> includes externalMembersId and
-		// name).
+		// Map external members (ExternalMemberDTO -> includes externalMembersId and name).
 		if (group.getExternalMembers() != null) {
 
 			// Convert each external member to ExternalMemberDTO.
@@ -239,16 +277,56 @@ public class GroupServiceImpl implements GroupService {
 		List<Group> groups = groupMembers.stream().map(gm -> gm.getId().getGroup()).distinct()
 				.toList();
 
-		// Map groups to response DTO format.
-		List<CreateGroupResponseDTO> createGroupResponseDTO = groups.stream()
-				.map(group -> mapToGroupResponseDTO(group, userId)).collect(Collectors.toList());
+		// Map groups to response DTO format
+		List<GroupResponseDTO> groupResponseDTOs = groups.stream()
+				.map(group -> {
 
+					// Fetch all Expenses associated with the Group
+					List<Expense> expenses = expenseRepository.findByGroupId_GroupId(group.getGroupId());
+
+					// Initialize variables for paid user or external member
+					User paidByUser = null;
+					ExternalMember paidByExternalMember = null;
+
+					if (!expenses.isEmpty()) {
+						// Find the first expense (or process multiple expenses if necessary)
+						Expense expense = expenses.getFirst();
+
+						// Assign the paid user or external member from the expense
+						paidByUser = expense.getPaidByUser();
+						paidByExternalMember = expense.getPaidByExternalMember();
+					}
+
+					// Map to GroupResponseDTO with all required params
+					return mapToGroupResponseDTO(group, userId, paidByUser, paidByExternalMember);
+				})
+				.collect(Collectors.toList());
+
+		// Create the response DTO
 		GetGroupResponseDTO getGroupResponseDTO = new GetGroupResponseDTO();
 
 		// Set the mapped groups list in the response DTO.
-		getGroupResponseDTO.setGroups(createGroupResponseDTO);
+		getGroupResponseDTO.setGroups(groupResponseDTOs);
 
 		return getGroupResponseDTO;
+	}
+
+	@Override
+	@Transactional(readOnly = true)
+	public GetGroupMembersResponseDTO getGroupMembersByGroup(Long groupId) {
+
+		// Find the group by ID or throw exception if not found.
+		Group group = findGroupOrThrow(groupId);
+
+		List<RegisteredMemberDTO> registeredMembers = group.getRegisteredMembers().stream()
+				.map(registeredMember -> new RegisteredMemberDTO(registeredMember.getId().getUser().getUserId(), registeredMember.getId().getUser().getUsername(), registeredMember.getId().getUser().getPhoneNumber()))
+				.toList();
+
+		List<ExternalMemberDTO> externalMembers = group.getExternalMembers().stream()
+				.map(externalMember -> new ExternalMemberDTO(externalMember.getExternalMembersId(), externalMember.getName()))
+				.toList();
+
+		return new GetGroupMembersResponseDTO(registeredMembers, externalMembers);
 	}
 
 	@Override
@@ -258,22 +336,12 @@ public class GroupServiceImpl implements GroupService {
 		// Find the group by ID or throw exception if not found.
 		Group group = findGroupOrThrow(groupId);
 
-		// Get the phoneNumber from the current token.
-		String userPhoneNumber = jwtService.getUserIdentifierFromToken(token);
-
-		// Find user by the phoneNumber provided with the token.
-		User user = userRepository.findByPhoneNumber(userPhoneNumber)
-				.orElseThrow(() -> new UserNotFoundException("User not found"));
-
-		// Validate that the deletion is being done by the group creator.
-		if (!group.getCreatedBy().getUserId().equals(user.getUserId())) {
-			
-			throw new InvalidGroupCreatorException(
-					"User " + user.getUserId() + " has no permissions to delete group " + group.getGroupId());
-		}
+		// Invoke private method to validate the group creator.
+		validateGroupCreator(group, token);
 
 		// Delete expenses associated by the group.
-		List<Expense> expenses = expenseRepository.findAllByGroup(group);
+		List<Expense> expenses = expenseRepository.findAllByGroupId(group);
+
 		for (Expense expense : expenses) {
 			expenseServiceImpl.deleteExpenseByGroupAndId(group.getGroupId(), expense.getExpenseId());
 		}
@@ -287,6 +355,9 @@ public class GroupServiceImpl implements GroupService {
 	@Override
 	@Transactional
 	public MessageResponseDTO leaveGroup(Long groupId, String token) {
+
+		/* TODO: validateGroupCreator() METHOD SHOULD BE USED HERE BUT ITS HARDER THAN THE OTHER IMPLEMENTATIONS SINCE
+		 * TODO: METHOD ALSO HAS VALIDATION TO CHECK IF THE GROUP MEMBER EXISTS IN THE GROUP. */
 
 		// Find the group by ID or throw exception if not found.
 		Group group = findGroupOrThrow(groupId);
@@ -324,18 +395,8 @@ public class GroupServiceImpl implements GroupService {
 		// Find the group or throw an exception if not found.
 		Group group = findGroupOrThrow(groupId);
 
-		// Get the phone number from the current token.
-		String userPhoneNumber = jwtService.getUserIdentifierFromToken(token);
-
-		// Find user by the phone number provided with the token.
-		User user = userRepository.findByPhoneNumber(userPhoneNumber)
-				.orElseThrow(() -> new UserNotFoundException("User not found"));
-
-		// Validate that the update is being done by the group creator.
-		if (!group.getCreatedBy().getUserId().equals(user.getUserId())) {
-			throw new InvalidGroupCreatorException(
-					"User " + user.getUserId() + " has no permissions to update group " + group.getGroupId());
-		}
+		// Invoke private method to validate the group creator.
+		validateGroupCreator(group, token);
 
 		// Update only the fields present in the Map.
 		updateGroupFields(group, fields);
@@ -346,6 +407,8 @@ public class GroupServiceImpl implements GroupService {
 
 		if (!violations.isEmpty()) {
 			
+			// TODO: CHECK IF THIS VALIDATIOSN ARE BEING HANDLED BY METHODEXCEPTION IN GLOBALEXCEPTIONHANDLER.
+
 			// If there are validation errors, throw an exception with the messages.
 			String errorMessages = violations.stream().map(ConstraintViolation::getMessage)
 					.collect(Collectors.joining(", "));
@@ -387,24 +450,33 @@ public class GroupServiceImpl implements GroupService {
 
 	@Override
 	@Transactional
+	public MessageResponseDTO updateGroupEstimatedPrice(Long groupId, UpdateGroupEstimatedPriceRequestDTO request, String token) {
+
+		// Find the group by ID or throw exception if not found.
+		Group group = findGroupOrThrow(groupId);
+
+		// Invoke private method to validate the group creator.
+		validateGroupCreator(group, token);
+
+		group.setEstimatedPrice(request.getEstimatedPrice());
+
+		groupRepository.save(group);
+
+		expenseServiceImpl.updateExpenseTotalAmount(group, request.getEstimatedPrice());
+
+		return new MessageResponseDTO("Estimated price updated and shares recalculated.");
+    }
+
+	@Override
+	@Transactional
 	public MessageResponseDTO updateGroupRegisteredMembers(Long groupId,
 														   UpdateGroupRegisteredMembersRequestDTO request, String token) {
 
 		// Find the group by ID or throw exception if not found.
 		Group group = findGroupOrThrow(groupId);
 
-		// Get the phone number from the current token.
-		String userPhoneNumber = jwtService.getUserIdentifierFromToken(token);
-
-		// Find user by the phone number provided with the token.
-		User user = userRepository.findByPhoneNumber(userPhoneNumber)
-				.orElseThrow(() -> new UserNotFoundException("User not found"));
-
-		// Validate that the update is being done by the group creator.
-		if (!group.getCreatedBy().getUserId().equals(user.getUserId())) {
-			throw new InvalidGroupCreatorException(
-					"User " + user.getUserId() + " has no permissions to update group " + group.getGroupId());
-		}
+		// Invoke private method to validate the group creator.
+		validateGroupCreator(group, token);
 
 		// List invited phone numbers.
 		Set<String> invitedPhoneNumbers = new HashSet<>(request.getInvitedRegisteredMembers());
@@ -432,18 +504,8 @@ public class GroupServiceImpl implements GroupService {
 		// Find the group by ID or throw exception if not found.
 		Group group = findGroupOrThrow(groupId);
 
-		// Get the phone number from the current token.
-		String userPhoneNumber = jwtService.getUserIdentifierFromToken(token);
-
-		// Find user by the phone number provided with the token.
-		User user = userRepository.findByPhoneNumber(userPhoneNumber)
-				.orElseThrow(() -> new UserNotFoundException("User not found"));
-
-		// Validate that the update is being done by the group creator.
-		if (!group.getCreatedBy().getUserId().equals(user.getUserId())) {
-			throw new InvalidGroupCreatorException(
-					"User " + user.getUserId() + " has no permissions to update group " + group.getGroupId());
-		}
+		// Invoke private method to validate the group creator.
+		validateGroupCreator(group, token);
 
 		// Extract the set of external member IDs from the request.
 		Set<Long> newIds = extractExternalMemberIds(request);
@@ -504,6 +566,19 @@ public class GroupServiceImpl implements GroupService {
 		}
 	}
 
+	private void validateGroupCreator(Group group, String token) {
+
+		String userPhoneNumber = jwtService.getUserIdentifierFromToken(token);
+
+		User user = userRepository.findByPhoneNumber(userPhoneNumber)
+				.orElseThrow(() -> new UserNotFoundException("User not found"));
+
+		if (!group.getCreatedBy().getUserId().equals(user.getUserId())) {
+			throw new InvalidGroupCreatorException(
+					"User " + user.getUserId() + " has no permissions to update group " + group.getGroupId());
+		}
+	}
+
 	// Find group by ID or throw if not found.
 	private Group findGroupOrThrow(Long groupId) {
 
@@ -518,7 +593,7 @@ public class GroupServiceImpl implements GroupService {
 				.filter(Objects::nonNull).collect(Collectors.toSet());
 	}
 
-	// Remove external members that are not longer invited.
+	// Remove external members that are no longer invited.
 	private void removeDeletedExternalMembers(Group group, Set<Long> newIds) {
 
 		group.getExternalMembers().removeIf(member -> !newIds.contains(member.getExternalMembersId()));
@@ -535,7 +610,7 @@ public class GroupServiceImpl implements GroupService {
 		}
 
 		ExternalMember newMember = new ExternalMember();
-		newMember.setGroup(group);
+		newMember.setGroupId(group);
 
 		return newMember;
 	}
@@ -543,9 +618,6 @@ public class GroupServiceImpl implements GroupService {
 	// Ensure the addition of the external member to the group.
 	private void addMemberToGroupIfMissing(Group group, ExternalMember member) {
 
-		if (!group.getExternalMembers().contains(member)) {
-
-			group.getExternalMembers().add(member);
-		}
+        group.getExternalMembers().add(member);
 	}
 }
